fixed button color on mobile

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ button {
     font-size: large;
     font-family: 'Mario Kart DS';
     cursor: pointer;
+    color:#000000;
 }
 button:disabled {
     cursor: default;
